@@ -1,3 +1,8 @@
+2019-01-18  Enrico Schumann  <es@enricoschumann.net>
+
+	* R/functions.R (dctable): add function (still
+	incomplete)
+
 2018-12-14  Enrico Schumann  <es@enricoschumann.net>
 
         * DESCRIPTION (Version): 0.1-10
